# beatbop

./: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
glad/src/: glad.c
include/: beatCircle.h  buffers.h  shader.h  sound.h
shader/: basic.vert
src/: beatCircle.cpp  buffers.cpp  main.cpp  shader.cpp  sound.cpp
